2007-10-29  Aaron Bockover  <abock@gnome.org>

	* HUGE COMMIT: This commit breaks the build horribly and is a first step
	in the merge of all the cool model/view stuff; do not expect it to build
	or work at all from this point on until ... it does (hopefully within
	two weeks)

2007-10-24  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/ActionManager.cs: Remove ellipses from Plugins
	menu item.  Patch from Michael Monreal, fixes BGO #478465.

	* src/Plugins/Banshee.Plugins.Podcast/UI/PodcastFeedView.cs: Make strings
	more easily translatable. Fixes BGO #407094.

2007-10-14  Yannig Marchegay  <yannig@marchegay.org>

	* po/LINGUAS: Added 'oc' to ALL_LINGUAS.

2007-10-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/Core/Banshee/PlayerInterface.cs: Don't filter by
	Artist/Album/Genre if the relevant field is empty or null. Before
	Banshee crashed whenever the field was null. (BGO #479237)
	While at that, also convert tabs to spaces.

2007-10-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Banshee.SmartPlaylist/QueryBuilder.cs: Prevent
	array index out of bounds error -- not sure what's changed (Gtk#?) but
	suddenly selecting most smart playlist condition types would cause a
	crash.  Fixes BGO #464362.

	* src/Core/Banshee.Base/Banshee.SmartPlaylist/QueryBuilderModel.cs:
	Whitespace.

2007-09-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/Core/Banshee.Base/Banshee.Library/Import.cs:
	* src/Core/Banshee.Base/StreamTagger.cs: Use TagLib to filter files
	that don't contain audio only instead of filtering by the mimetype
	which breaks for some mp4 files (BGO #472747)

2007-09-04  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient: Migrated Banshee.ThickClient 

2007-09-04  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services: Migrated Banshee.Services

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceManager.cs:
	* src/Core/Banshee.Services/Banshee.ServiceStack/Application.cs: Disabled