@@ -36,6 +36,7 @@ using System.Collections.Generic;
 using Banshee.Base;
 using Banshee.Metadata;
 using Banshee.Kernel;
+using Banshee.Collection;
 
 namespace Banshee.Metadata.MusicBrainz
 {
